# modhmm

./: CMakeLists.txt  README
modhmmc/trunk/: README
modhmmts/trunk/: CMakeLists.txt  README
modhmmts/trunk/src/: CMakeLists.txt  cmdline_add_alphabet.h  cmdline_hmmsearch.h  cmdline_hmmtrain.c  cmdline_hmmtrain.h  cmdline_modseqalign.c  cmdline_modseqalign.h  funcs.h  hmmsearch.c  hmmtrain.c  modhmms.c  savehmm.c  std_calculation_funcs.c
modhmmts/trunk/src/blastscripts/: run_blast.sh  run_psiblast.sh
modhmmts/trunk/src/c/: CMakeLists.txt  core_algorithms_multialpha.c  modhmmt.c
modhmmts/trunk/src/data/: CMakeLists.txt
modhmmts/trunk/src/docbook/: CMakeLists.txt  index.xml.cmake
modhmmts/trunk/src/gengetopt/: add_alphabet.ggo  cmdline_add_alphabet.c  cmdline_add_alphabet.h  cmdline_hmmsearch.c  cmdline_hmmsearch.h  cmdline_hmmtrain.h  cmdline_modseqalign.c  cmdline_modseqalign.h  hmmsearch.ggo  hmmtrain.ggo  modseqalign.ggo  run_gengetopt.sh
modhmmts/trunk/src/programs/add_alphabet/: cmdline.ggo.cmake
modhmmts/trunk/src/programs/modhmms/: cmdline.ggo.cmake
modhmmts/trunk/src/programs/modhmmt/: cmdline.ggo.cmake
modhmmts/trunk/src/programs/modseqalign/: cmdline.ggo.cmake
modhmmts/trunk/srctemp/: std_funcs.c
src/c/: CMakeLists.txt  funcs.h  modhmms.c  savehmm.c  savehmm_multialpha.c  std_funcs.c
src/c/gengetopt/: cmdline_modhmms.ggo.cmake
src/c/test/octopus/test1/: test.sh
src/c/test/scampi/test1/: test.sh
src/c/test/spoctopus/test1/: test.sh
src/java/: BetaGamma.java  Constants.java  Polynomial.java
